# mdns

./: Cargo.toml  README.md
examples/: simple.rs
src/: lib.rs  packet.rs  server.rs
src/multicast/: mod.rs  unix.rs  windows.rs
src/multicast/windows/: mod.rs  wsa.rs
