[package]
name = "simple_mdns"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "^1.19", features = ["full"] }
bitflags = { version = "^1.3" }
log = { version = "^0.4" }
multicast-socket = { version = "^0.2" }
hostname = { version = "^0.3" }
cidr-utils = { version = "^0.5" }
anyhow = { version = "^1.0" }

[target.'cfg(windows)'.dependencies]
ipconfig = { version = "^0.3" }

[target.'cfg(unix)'.dependencies]
get_if_addrs = { version = "^0.5" }