[package]
name = "simple_mdns"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "^1.19", features = ["full"] }
bitflags = { version = "^1.3" }
log = { version = "^0.4" }
if-addrs = { version = "^0.8" }
hostname = { version = "^0.3" }
cidr-utils = { version = "^0.5" }
anyhow = { version = "^1.0" }

[target.'cfg(unix)'.dependencies]
libc = { version = "^0.2" }
nix = { version = "^0.26" }

[target.'cfg(windows)'.dependencies]
windows = { version = "^0.47", features = ["Win32_Foundation", "Win32_System_IO", "Win32_Networking_WinSock"] }
lazy_static = { version = "^1.4" }

[dev-dependencies]
pretty_env_logger = { version = "^0.4" }